# DeepTracking

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  run.sh
include/caffe/layers/: manual_prior_box_layer.hpp  normalization_layer.hpp  resize_layer.hpp
include/caffe/proto/: caffe.pb.cc  caffe.pb.h
src/: CMakeLists.txt  detect.cpp  gputrack.cpp  main.cpp  track.cpp
src/DL_detector/: detection_ssd.cpp  detection_ssd.h
src/allocator/: gpuallocator.cpp
src/gputracker/: gpustc_mot_tracker.cpp  gpustc_mot_tracker.h
src/tracker/: stc_mot_tracker.cpp  stc_mot_tracker.cpp.new  stc_mot_tracker.cpp.ori  stc_mot_tracker.h  stc_mot_tracker.h.new  stc_mot_tracker.h.ori
src/util/: timing_profiler.cpp  timing_profiler.h
