AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(DL_detector SRC_DETECTOR)
AUX_SOURCE_DIRECTORY(tracker SRC_TRACKER)
AUX_SOURCE_DIRECTORY(util SRC_UTIL)

SET(SRC_LIST main.cpp)
LIST(APPEND SRC_LIST ${SRC_DETECTOR} ${SRC_TRACKER} ${SRC_UTIL})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS})
message("LIBS:" ${LIBS})

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
INSTALL(DIRECTORY ${CONAN_LIB_DIRS_CAFFE}/${PLATFORM}/ DESTINATION ${PROJECT_SOURCE_DIR}/lib/${PLATFORM} FILES_MATCHING PATTERN "*.so*")
INSTALL(DIRECTORY ${CONAN_LIB_DIRS_PROTO}/${PLATFORM}/ DESTINATION ${PROJECT_SOURCE_DIR}/lib/${PLATFORM} FILES_MATCHING PATTERN "*.so*")
