# AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(DL_detector SRC_DETECTOR)
AUX_SOURCE_DIRECTORY(tracker SRC_TRACKER)
AUX_SOURCE_DIRECTORY(util SRC_UTIL)

# SET(SRC_LIST)
LIST(APPEND SRC_LIST ${SRC_DETECTOR} ${SRC_TRACKER} ${SRC_UTIL})

ADD_EXECUTABLE(main  main.cpp ${SRC_LIST})
ADD_EXECUTABLE(main_cv main_cv.cpp ${SRC_LIST})
ADD_EXECUTABLE(main_fftw main_fftw.cpp ${SRC_LIST})
ADD_EXECUTABLE(main_fftwf main_fftwf.cpp ${SRC_LIST})
ADD_EXECUTABLE(main2 main2.cpp ${SRC_LIST})
ADD_EXECUTABLE(main_test main_test.cpp ${SRC_LIST})
#  main.cpp main_cv.cpp main_fftw.cpp main2.cpp

TARGET_LINK_LIBRARIES(main ${LIBS})
TARGET_LINK_LIBRARIES(main_cv ${LIBS})
TARGET_LINK_LIBRARIES(main_fftw ${LIBS})
TARGET_LINK_LIBRARIES(main2 ${LIBS})
TARGET_LINK_LIBRARIES(main_fftwf ${LIBS})
TARGET_LINK_LIBRARIES(main_test ${LIBS})
message("LIBS:" ${LIBS})

# INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
# INSTALL(DIRECTORY ${CONAN_LIB_DIRS_CAFFE}/${PLATFORM}/ DESTINATION ${PROJECT_SOURCE_DIR}/lib/${PLATFORM} FILES_MATCHING PATTERN "*.so*")
# INSTALL(DIRECTORY ${CONAN_LIB_DIRS_PROTO}/${PLATFORM}/ DESTINATION ${PROJECT_SOURCE_DIR}/lib/${PLATFORM} FILES_MATCHING PATTERN "*.so*")
#ADD_SUBDIRECTORY(test)
