# AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(DL_detector SRC_DETECTOR)
AUX_SOURCE_DIRECTORY(tracker SRC_TRACKER)
AUX_SOURCE_DIRECTORY(util SRC_UTIL)
AUX_SOURCE_DIRECTORY(allocator SRC_GPUALLOCATOR)
AUX_SOURCE_DIRECTORY(gputracker SRC_GPUTRACKER)

# SET(SRC_LIST)
LIST(APPEND SRC_LIST ${SRC_UTIL})

ADD_EXECUTABLE(detect  detect.cpp ${SRC_LIST} ${SRC_DETECTOR})
ADD_EXECUTABLE(track  track.cpp ${SRC_LIST} ${SRC_TRACKER})
ADD_EXECUTABLE(gputrack  gputrack.cpp ${SRC_LIST} ${SRC_GPUTRACKER} ${SRC_GPUALLOCATOR})
#  main.cpp main_cv.cpp main_fftw.cpp main2.cpp

TARGET_LINK_LIBRARIES(detect ${LIBS})
TARGET_LINK_LIBRARIES(track ${LIBS})
TARGET_LINK_LIBRARIES(gputrack ${LIBS})

message("LIBS:" ${LIBS})

